@@ -44,6 +44,7 @@ Other features
  * Rich text fields now take feature lists into account when whitelisting HTML elements (Matt Westcott)
  * FormPage lists and Form submission lists in admin now use class based views for easy overriding (Johan Arensman)
  * Form submission csv exports now have the export date in the filename and can be customized (Johan Arensman)
+ * FormBuilder class now uses bound methods for field generation, adding custom fields is now easier and documented (LB (Ben Johnston))
 
 Bug fixes
 ~~~~~~~~~
